--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Nathy/vendor/spdlog"]
 	path = Nathy/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Nathy/vendor/GLFW"]
+	path = Nathy/vendor/GLFW
+	url = https://github.com/TheCherno/glfw
